fixing read more layout issue

--- a/source/stylesheets/pages/_blog.scss
+++ b/source/stylesheets/pages/_blog.scss
@@ -56,6 +56,7 @@
 	.more {
 		position: relative;
 		padding-right: 1em;
+		float: left;
 	}
 
 	.icon-more {
